tests/paczka1/small_fuzzy/79378161.err
Error in line 2: S156 A12 22,8
Error in line 13: CkqpBV A658 67,6
